# hap

./: .coverage  .coverage.cursor.316377.XuIvIVVx.wgw0  .coverage.cursor.316380.XWiEoLYx.wgw1  .coverage.cursor.316383.XqTXtBwx.wgw2  .coverage.cursor.316386.XEFfnYXx.wgw3  .coverage.cursor.322662.XyxSWdqx.wgw0  .coverage.cursor.322665.XpJnLywx.wgw1  .coverage.cursor.322668.XWBMPdhx.wgw2  .coverage.cursor.322671.XTTQAgrx.wgw3  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REPORT.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.ai/: agent-brief.md  commands.md  contracts.md  conventions.md  repo-map.md
.ai/playbooks/: plan-review.md  review-rubric.md  task-open.md
.claude/commands/: plan-draft.md  plan-freeze.md  start-impl.md
.github/: pull_request_template.md
.github/workflows/: constraints.txt
.hypothesis/constants/: 0570a7c52cd987f9  0736e2d4acddd01a  0d65a410db824952  0e0f6fe80374a6d2  1cce0c53a0aa1633  1f1c414e98d973fd  2826db1e539cad58  2f49888d399714a6  2fda912527187aee  3ae889bd8781f3aa  3b52a27b82f24a81  3eb6d7328d689f6d  3fb3cf1e005153c0  44971ea411745967  49c6c4ec850e8a7f  49dbff769e7e1ccb  5382f99c9b337794  557b826a72f9d96d  58655014623c6667  5dad9ffdc3c4abc2  603e6f1734507789  61607c3bf13d97f7  651359ef16bca5a1  661a9a8764ae439e  67b0a8ccf18bf5d2  6bbac69d213e2ae7  70c2241423f14e15  72db5d8a70be596b  7743261fccbdb967  7f633e553e24d82f  81692415beecc6ab  88e2f80e7420d338  899a24b1b4bb56fd  8dbf82f09c1fe280  8ed1f4e1c7668d49  903f37f572599211  9b10065e9a5ea3b0  a8031a31700d68e9  af30ab1e2c46ca3b  b184f8ba0db72722  (+15 more)
data/mini-example/: annotations.bed12  annotations.gff3  mini-example.gfa  mini-example_legacy.seq  new-mini-example.annotations.bed  new-mini-example.annotations.gff3  new-mini-example.annotations.gtf  new-mini-example.gfa  node_features.bed  nodes.fa  smp1.annotations.bed  smp1.annotations.gff3  smp1.annotations.gtf  smp2.annotations.gff3  smp3.annotations.gff3
docs/: COMMANDS.md  annotation_user_guide.md  conf.py  index.md  prd.md  reference.md  requirements.txt  usage.md
docs/_static/: haprose-logo.css
docs/dev/: annotation-parser-analysis.md  path-naming-fix-plan.md  (+1 more)
hap/: hapinfo.py  main.py
scripts/: build_report.py
src/: hapinfo.py  main.py  palchinfo.py
tests/: __init__.py  conftest.py  test_main.py
(+134 files in other folders)
