[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hap"
version = "0.1.0"
description = "Hierarchical Pangenome toolkit"
keywords = ["hierarchical pangenome", "prowse", "pangenome", "bioinfomatics", "genomics", "data"]
authors = ["yuanminhui <inmoinu@gmail.com>"]
maintainers = ["yuanminhui <inmoinu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yuanminhui/hap"
documentation = "https://github.com/yuanminhui/hap/wiki"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
exclude = ["data", "tests"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
igraph = "^0.11.2"


[tool.poetry.scripts]
hap = "hap.main:main"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yuanminhui/hap/issues"